VQ-1732B: Ability to select risk class- risk other details screen

--- a/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
+++ b/src/app/features/gis/components/policy/components/risk-details/risk-details.component.html
@@ -513,7 +513,7 @@
                         </div>
                         <div class=" mb-1 col-sm-4 col-12">
                             <label class=" risk-label">{{'gis.policy.survey_risk'|translate}}</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
+                            <select class="form-select form-control-sm mb-1 ms-n4 selectInput" id="product-input"
                                 formControlName="surveyDate">
                                 <option value="Y">{{'gis.policy.yes' | translate}}</option>
                                 <option value="N">{{'gis.policy.no' | translate}}</option>
@@ -546,7 +546,7 @@
                         <div class="mb-1 col-sm-4 col-12">
                             <label for="computeMaxExposure" class=" risk-label"
                                 id="riskLocation">{{'gis.policy.compute_maximum_exposure'|translate}}</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
+                            <select class="form-select form-control-sm mb-1 ms-n4 selectInput" id="product-input"
                                 formControlName="computeMaxExposure">
                                 <option value="Y">{{'gis.policy.yes' | translate}}</option>
                                 <option value="N">{{'gis.policy.no' | translate}}</option>
@@ -587,7 +587,7 @@
                         <div class="mb-1 col-sm-4 col-12">
                             <label for="newRisk" class="required risk-label"
                                 id="riskLocation">{{'gis.policy.new_risk'|translate}}?</label>
-                            <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
+                            <select class="form-select form-control-sm mb-1 ms-n4 selectInput" id="product-input"
                                 formControlName="newRisk">
                                 <option value="Y">{{'gis.policy.yes' | translate}}</option>
                                 <option value="N">{{'gis.policy.no' | translate}}</option>
@@ -605,7 +605,7 @@
                             <div class="mb-1 col-sm-4 col-12">
                                 <label for="emlLocation" class=" risk-label"
                                     id="emlLocation">{{'gis.policy.eml_top_location_level'|translate}}</label>
-                                <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
+                                <select class="form-select form-control-sm mb-1 ms-n4 selectInput" id="product-input"
                                     formControlName="topLocationLevel">
                                     <option value="">RSK</option>
                                     <option value="">SEC</option>
@@ -615,7 +615,7 @@
                             </div>
                             <div class=" mb-1 col-sm-4 col-12">
                                 <label class=" risk-label">{{'gis.policy.period_rates'|translate}}</label>
-                                <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
+                                <select class="form-select form-control-sm mb-1 ms-n4 selectInput" id="product-input"
                                     formControlName="periodRate">
                                     <option value="">{{'gis.policy.prorata'|translate}}</option>
                                     <option value="">{{'gis.policy.short_period_rates'|translate}}</option>
@@ -694,11 +694,9 @@
                             <div class="mb-1 col-sm-4 col-12">
                                 <label for="newRisk" class=" risk-label"
                                     id="riskLocation">{{'gis.policy.risk_class'|translate}}</label>
-                                <select class="form-select form-control-sm mb-1 ms-n4" id="product-input"
-                                    formControlName="riskClass">
-                                    <option value=""></option>
-                                    <option value=""></option>
-                                </select>
+                               
+                                <p-dropdown [options]="riskClassList" optionValue="code" optionLabel="description" placeholder=" "
+                                [filterBy]="'description'" [filter]="true" formControlName="riskClass"></p-dropdown>
 
                             </div>
 
