--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -934,13 +934,20 @@
                                                                                     id="scheduleLabel">{{'gis.quotation.body_type'
                                                                                     | translate}}</label>
                                                                                 <div class="col-7">
-                                                                                    <select
+                                                                                    <!-- <select
                                                                                         class="form-select form-control-sm mb-1"
                                                                                         id="scheduleInput"
                                                                                         formControlName="bodyType">
                                                                                         <option></option>
                                                                                         <option></option>
-                                                                                    </select>
+                                                                                    </select> -->
+                                                                                    <p-dropdown
+                                                                                    [options]="bodytypesList"
+                                                                                    optionValue="description"
+                                                                                    optionLabel="description"
+                                                                                    formControlName="bodyType"
+                                                                                    [filterBy]="'description'"
+                                                                                    [filter]="true"></p-dropdown>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
