VQ-2856:Ability to Edit Schedule (Motor - Colors)

--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -934,13 +934,7 @@
                                                                                     id="scheduleLabel">{{'gis.quotation.body_type'
                                                                                     | translate}}</label>
                                                                                 <div class="col-7">
-                                                                                    <!-- <select
-                                                                                        class="form-select form-control-sm mb-1"
-                                                                                        id="scheduleInput"
-                                                                                        formControlName="bodyType">
-                                                                                        <option></option>
-                                                                                        <option></option>
-                                                                                    </select> -->
+                                                                                    
                                                                                     <p-dropdown
                                                                                     [options]="bodytypesList"
                                                                                     optionValue="description"
@@ -990,13 +984,14 @@
                                                                                     id="scheduleLabel">{{'gis.quotation.colour'
                                                                                     | translate}}</label>
                                                                                 <div class="col-7">
-                                                                                    <select
-                                                                                        class="form-select form-control-sm mb-1"
-                                                                                        id="scheduleInput"
-                                                                                        formControlName="color">
-                                                                                        <option></option>
-                                                                                        <option></option>
-                                                                                    </select>
+                                                                                    
+                                                                                    <p-dropdown
+                                                                                    [options]="motorColorsList"
+                                                                                    optionValue="code"
+                                                                                    optionLabel="description"
+                                                                                    formControlName="color"
+                                                                                    [filterBy]="'description'"
+                                                                                    [filter]="true"></p-dropdown>
                                                                                 </div>
                                                                             </div>
                                                                         </div>
