--- a/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
+++ b/src/app/features/lms/grp/components/claims/components/claim-admission/claim-admission.component.css
@@ -231,6 +231,111 @@ td {
   white-space: nowrap;
 }
 
+.docs:nth-child(n + 3) {
+  margin-top: 20px;
+}
+
+.choose-file {
+  display: inline-flex;
+  height: 24px;
+  padding: 12px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid #00529B;
+  background-color: #FFF;
+}
+
+.file-text {
+  color: #00529B;
+  font-family: 'Roboto', sans-serif;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+.delete-icon {
+  margin-left: 10px;
+  cursor: pointer;
+  color: red;
+}
+
+:host ::ng-deep .p-progressbar-value {
+  border-radius: 10px;
+  background: #138700;
+  font-size: 0px;
+}
+
+:host ::ng-deep .p-progressbar {
+  width: 100%;
+  height: 3px;
+}
+
+.pdf-icon {
+  width: 24px;
+  height: 24px;
+}
+
+.file-details {
+  flex-grow: 1;
+  position: relative;
+}
+
+.file-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  white-space: nowrap;
+  margin-top: 10px;
+  width: 70%;
+}
+
+.file-details {
+  flex-grow: 1;
+  position: relative;
+}
+
+.file-name-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+}
+
+.file-name {
+  color: #00529B;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-right: 10px;
+  overflow: auto;
+  white-space: nowrap;
+}
+
+.completed {
+  color: #138700;
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.progress-bar {
+  width: 100%;
+}
+
+.delete-icon {
+  font-size: 16px;
+  cursor: pointer;
+  margin-left: 10px;
+  margin-top: 10px;
+}
 
 @media (max-width: 1200px) {
   .main {
